overflow y fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -137,7 +137,6 @@ body {
     min-height: 100%;
     width: 100%;
     overflow-x: hidden;
-    overflow-y: scroll;
     -webkit-font-smoothing: antialiased !important;}
 
 .footer{
